fix layout break

--- a/source/stylesheets/layout-docs.scss
+++ b/source/stylesheets/layout-docs.scss
@@ -22,6 +22,11 @@ section.docs h2 {
   border-left: 0.5rem solid $color-sky-blue;
   padding-left: 0.5rem;
 }
+section.docs > article {
+  @media #{$desktop} {
+    flex: 1 1;
+  }
+}
 section.docs aside.toc {
   @media #{$mobile-and-tablet} {
     display: none;
